--- a/ASE assignment/Form1.resx
+++ b/ASE assignment/Form1.resx
@@ -120,4 +120,81 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAQAAAAbAAAAHwAAAB8AAAAfAAAAHgAAABAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAADAAAAFgAAAB8AAAAfAAAAHwAAAB8AAAAbAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAGwAAAMUAAADiAAAA4AAAAOIAAADhAAAAyQAAAGEAAAAfAAAAHwAAAB8AAAAeAAAAGAAA
+        AAsAAAAAAAAACgAAAHsAAADWAAAA4gAAAOIAAADhAAAA4gAAAMUAAAAbAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAVAAAA0gAAAP8AAAD7AAAA5AAAAOUAAAD6AAAA9wAAAOMAAADiAAAA4gAA
+        AOEAAADaAAAAwQAAAIsAAACNAAAA+AAAAPUAAADiAAAA4QAAAPMAAAD/AAAA1gAAABcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB3AAAA+gAAAPoAAAB9AAAAIAAAAHkAAADgAAAA4gAA
+        AOIAAADiAAAA4wAAAOsAAAD6AAAA/wAAAP8AAAD5AAAAbgAAABsAAABUAAAA4gAAAP8AAACTAAAAAgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALAAAARQAAACUAAAB7AAAA3wAAALAAAAAOAAAABgAA
+        AB0AAAAfAAAAHwAAAB8AAAAgAAAAKQAAAEUAAAB9AAAAzQAAAMwAAAAVAAAACgAAALYAAAD/AAAAtgAA
+        AB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAIAAAAD4AAAAsgAAADwAAAA6AAAANgAA
+        ABkAAAAOAAAABQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXAAAAOAAAAAEAAAAcAAAA3wAA
+        AOoAAAAvAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQQAAAN0AAAD/AAAA7QAA
+        AN4AAADcAAAA1gAAAMsAAAC4AAAAnQAAAHgAAABMAAAAIgAAAAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABUAAADUAAAA8AAAADIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPgAA
+        AOUAAAD/AAAA7AAAAOUAAADsAAAA9AAAAPwAAAD/AAAA/wAAAPwAAADjAAAArQAAAF8AAAAYAAAAAAAA
+        AAAAAAAAAAAABAAAAKkAAAD/AAAAgAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAGAAAArAAAAP8AAAC9AAAAMgAAACgAAAA1AAAARwAAAGIAAACIAAAAtQAAAOMAAAD9AAAA/AAA
+        AM8AAABmAAAADQAAAAAAAAAAAAAAUAAAAPQAAADwAAAAgAAAABwAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABHAAAA9AAAAN8AAAAdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAAAIwAA
+        AGAAAAC5AAAA9wAAAPoAAACqAAAAJAAAAAAAAAAGAAAAfAAAAPMAAAD+AAAA1QAAAHcAAAAaAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACYAAADpAAAA2wAAABkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAwAAABZAAAA1AAAAP8AAADFAAAAKgAAAAAAAAAGAAAAUQAAAMAAAAD5AAAA/gAA
+        AMoAAABCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAOMAAADjAAAAIAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApAAAAvQAAAP8AAAC7AAAAGAAAAAAAAAAAAAAAEAAA
+        AFoAAADIAAAA/wAAAOAAAAA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAygAAAPgAAABEAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjAAAAxwAAAP8AAACMAAAABAAA
+        AAAAAAAAAAAAAAAAABkAAACmAAAA/wAAAL4AAAAPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACSAAAA/wAA
+        AJIAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAABUAAAB4AAAA/gAA
+        AO4AAABGAAAAAAAAAEIAAACkAAAALgAAADIAAADxAAAA3QAAABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ADsAAADsAAAA7QAAAE4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtAAAAzQAA
+        APMAAAD+AAAA/wAAAL0AAAARAAAAcAAAAPUAAABUAAAAWgAAAP4AAADAAAAACwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAwAAAIAAAAD9AAAA4wAAAGcAAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHQAA
+        ALAAAAD/AAAA0gAAAIIAAADKAAAA/wAAAJMAAAA5AAAAYAAAAGsAAADaAAAA/wAAAHIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAADQAAAIwAAAD2AAAA+gAAAMgAAACAAAAASgAAAC0AAAAlAAAANQAA
+        AGwAAADNAAAA/wAAAMoAAAAoAAAAAAAAAEEAAADgAAAA/gAAAOkAAADmAAAA+wAAAP0AAACpAAAAEwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAFoAAADHAAAA+gAAAP8AAAD8AAAA7gAA
+        AOkAAADzAAAA/wAAAPoAAAC3AAAALgAAAAAAAAAAAAAAAAAAADoAAACqAAAA3AAAAN0AAAC/AAAAcAAA
+        ABMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABMAAABOAAAAjgAA
+        ALoAAADSAAAA1wAAAMoAAACiAAAAWAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcAAAAZAAAAGgAA
+        AAoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAACAAAABIAAAAWAAAADgAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////////////////////////wD/AP8AAgD/AAAA/4AAAP4AA
+        AH8AP4D/gAHw/8AAcH/AABg/4fAID+H+BAfh/4MD4f/BwfD/gQHw/4AB8D8AA/gACAP8ABwH/wA+H//g
+        //////////////////////////////////8=
+</value>
+  </data>
 </root>
